--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "iview": "^2.0.0-rc.19",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
